@@ -1,3 +1,9 @@
+2004-12-09  Christophe Fergeau  <teuf@gnome.org>
+
+	* freedesktop.org.xml:
+	* freedesktop.org.xml.in: back out DTD change which wasn't expected in
+	the first place.
+
 2004-12-08  Christophe Fergeau  <teuf@gnome.org>
 
 	* freedesktop.org.xml:
